--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "yfinance (>=0.2.65,<0.3.0)",
     "duckduckgo-search (>=8.1.1,<9.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "groq (>=0.30.0,<0.31.0)"
+    "groq (>=0.30.0,<0.31.0)",
+    "openai (>=1.97.0,<2.0.0)"
 ]
 
 
