--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "duckduckgo-search (>=8.1.1,<9.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "groq (>=0.30.0,<0.31.0)",
-    "openai (>=1.97.0,<2.0.0)"
+    "openai (>=1.97.0,<2.0.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 
