--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ dependencies = [
     "fastapi[standard] (>=0.116.1,<0.117.0)",
     "agno (>=1.7.5,<2.0.0)",
     "pymongo (>=4.13.2,<5.0.0)",
+    "newspaper4k (>=0.9.3.1,<0.10.0.0)",
+    "lxml-html-clean (>=0.4.2,<0.5.0)",
+    "ddgs (>=9.3.1,<10.0.0)",
+    "arxiv (>=2.2.0,<3.0.0)",
+    "googlesearch-python (>=1.3.0,<2.0.0)",
+    "pycountry (>=24.6.1,<25.0.0)",
+    "pypdf (>=5.8.0,<6.0.0)",
 ]
 
 
